compiler/tools/fpp-check/test/port_numbering/unmatched_connection_port_number_in_use_2.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/unmatched_connection_port_number_in_use_2.fpp:24.7
      c2.pOut -> c1.pIn
      ^
error: port number 0 is already in use
previous usage is here:
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/unmatched_connection_port_number_in_use_2.fpp:25.17
      unmatched c2.pOut -> c1.pIn[0]
                ^
